@startuml
class Module {
    +isDone()
    +isSameModule()
    +equals()
    +hashCode()
    +toString()
}
class Title {}
class ModuleCode {}
class Credits {}

class Memo {}
class Description {}
class Semester {}
class Grade {}

Module *-- "1" Title
Module *-- "1" ModuleCode
Module *-- "1" Credits

Module 	o-- "1" Memo
Module 	o-- "1" Description
Module 	o-- "1" Semester
Module 	o-- "1" Grade
@enduml
